# plugins-for-modeling-

./: .gitignore  DEPLOY.md  Dockerfile  EXCEL_DEPLOY.md  README.md  THEORY.md  alembic.ini  docker-compose.yml  generate_cert.py  pyproject.toml  requirements.txt
config/: __init__.py  logging.yaml
excel-addin/: manifest.xml  package-lock.json  package.json  taskpane.html  tsconfig.json  vite.config.ts
excel-addin/src/: index.tsx
excel-addin/src/components/: App.tsx  ModelPreview.tsx
excel-addin/src/data/: financial-data.ts
excel-addin/src/engines/: bond-engine.ts  capital-budgeting-engine.ts  credit-risk-engine.ts  dcf-engine.ts  loan-engine.ts  monte-carlo-engine.ts  options-engine.ts  portfolio-engine.ts  ratios-engine.ts  sensitivity-engine.ts  var-engine.ts  wacc-engine.ts
excel-addin/src/services/: api.ts  market-data-service.ts  stock-screener.ts
excel-addin/src/styles/: global.css
excel-addin/src/utils/: excel-models.ts  excel.ts
google-sheets-addon/: Code.gs  Sidebar.html
src/api/: dependencies.py  main.py
src/api/routes/: auth.py  capital_budgeting.py  credit_risk.py  health.py  monte_carlo.py  sensitivity.py  var.py
src/api/schemas/: request_schemas.py  response_schemas.py
src/core/: database_session.py  logging_config.py  security.py
src/models/: database.py
src/models/migrations/: env.py
src/services/: capital_budgeting_service.py  credit_risk_service.py  monte_carlo_service.py  sensitivity_service.py  user_service.py  var_service.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_monte_carlo_service.py  test_var_service.py
